# land-use-classification-mlops

./: .gitignore  Data.dvc  Makefile  README.md  bash_for_gcloud  bash_for_gcloud.sh  basic.yaml  pyproject.toml  request_test.py  requirements.txt  requirements_dev.txt
.dvc/: config
.github/workflows/: data_test.yml  docker_containers.yml  tests.yml  tests2.yml
app/: main.py
bashscripts/: docker_registry.sh  gcloud_app.sh
dockerfiles/: app.dockerfile  predict_model.dockerfile  tests.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
gcloud_configs/: config_gpu.yaml
land-use-classification/y4tqgzhl/checkpoints/: epoch=3-step=460.ckpt
outputs/2024-01-15/13-19-51/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-15/13-20-45/.hydra/: hydra.yaml
project/: __init__.py  train_model.py
project/configs/: basic.yaml
project/data/: make_dataset.py
project/logger/: __init__.py  logger.py
project/models/: model.py
reports/: README.md
tests/: test_data.py  test_model.py
