[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Fab", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
select = ["I"]
line-length = 120


[tool.pytest.ini_options]
pythonpath = ["."]
